# obconnector-c

./: .secignore  CMakeLists.txt  README  README.md  appveyor.yml  azure-pipelines.yml  build.sh  cscope.in.out  cscope.out  cscope.po.out
client/: CMakeLists.txt
cmake/: ConnectorName.cmake  FindGSSAPI.cmake  FindIconv.cmake  install.cmake
include/: CMakeLists.txt  errmsg.h  ma_common.h  ma_global.h  ma_hash.h  ma_priv.h  ma_pvio.h  ma_sys.h  mariadb_com.h  mariadb_stmt.h  mariadb_version.h.in  mysql.h  ob_bitmap.h  ob_complex.h  ob_cond.h  ob_full_link_trace.h  ob_load_balance.h  ob_object.h  ob_oralce_format_models.h  ob_protocol20.h  ob_rwlock.h  ob_serialize.h  ob_thread.h  ob_thread_key.h  ob_utils.h
libmariadb/: CMakeLists.txt  ma_charset.c  ma_compress.c  ma_dtoa.c  ma_errmsg.c  ma_hash.c  ma_loaddata.c  ma_net.c  ma_password.c  ma_pvio.c  ma_stmt_codec.c  ma_time.c  mariadb_dyncol.c  mariadb_lib.c  mariadb_stmt.c  ob_bitmap.c  ob_complex.c  ob_cond.c  ob_full_link_trace.c  ob_load_balance.c  ob_object.c  ob_oracle_format_models.c  ob_protocol20.c  ob_rwlock.c  ob_serialize.c  ob_strtoll10.c  ob_thread.c  ob_thread_key.c  ob_tnsname.c  ob_tnsname.h  ob_utils.c
mariadb_config/: libmariadb.pc.in  mariadb_config.c.in
plugins/auth/: my_auth.c
plugins/connection/: aurora.c  replication.c
plugins/io/: remote_io.c
plugins/pvio/: pvio_npipe.c  pvio_shmem.c  pvio_socket.c
rpm/: libobclient-build.sh  libobclient.deps  libobclient.spec
unittest/my_test/: Makefile  ob_mysql_ps_cursor_test.c  ob_mysql_ps_test.c  ob_mysql_ssl_test.c  ob_new_ps_insert_test.c  ob_new_ps_select_notable.c  ob_new_ps_select_test.c  ob_new_ps_test.c  ob_oracle_array_binding_test.c  ob_oracle_datetype_test.c  ob_oracle_fetch_cursor_test.c  ob_oracle_pl_test.c  ob_oracle_ps_test.c  set_env.sh  test_util.h
unittest/ob20_test/: Makefile  ob20_appinfo_test.c  ob20_bigpacket_request_test.c  ob20_bigpacket_response_test.c  ob20_clientinfo_test.c  ob20_show_trace_test.c  ob20_slowquery_test.c  ob20_trans_test.c  run.sh  test_util.h
win-iconv/: win_iconv.c
win/packaging/: license.rtf  mariadb-connector-c.xml.in
zlib/: ChangeLog  compress.c  crc32.c  gzguts.h  minigzip.c  uncompr.c  zlib.h
